# fastapi-tutorial

./: .gitignore  config.py  db_model.py  main.py  models.py  pyproject.toml
frontend/src/: App.js
